--- a/src/sass/_filters.scss
+++ b/src/sass/_filters.scss
@@ -18,12 +18,18 @@
 					flex-direction: row;
 					justify-content: space-between;
 					align-items: center;
+					flex-wrap: wrap;
 					padding: 25px 0;
 					.filter-text {
 						flex-basis: 32%;
 						padding-left: 10px;
 						.filter-text_main{
-
+							sup {
+								position: relative;
+							    font-size: 1rem;
+							    top: -9px;
+							    left: -4px;
+							}
 						}
 						.filter-text_secondary {
 							color: #000;
@@ -48,12 +54,6 @@
    				font-size: 1.7rem;
 			}
 		}
-		.tabs-deployed {
-
-		}
-		.tabs-fast {
-
-		}
 	}
 }
 
@@ -72,4 +72,166 @@ label.checkbox-custom {
 }
 input[type=checkbox]:checked + label.checkbox-custom {
 	background-color: #fff;
+}
+
+// --------------
+// filter resalts
+// --------------
+
+.wrapp_resalt {
+	margin-top: 45px;
+	.header-resalt{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: flex-start;
+		flex-wrap: wrap;
+		.title-h3-wrapp {
+			// flex-basis: 50%;
+			.title-h3 {
+				color: $prime-color;
+				display: inline-block;
+			}
+			svg {
+				width: 30px;
+				height: 30px;
+				fill: $prime-color;
+				display: inline-block;
+				position: relative;
+    			top: 7px;
+  				margin-left: 15px;
+			}
+		}
+		
+		.group_chechbox {
+			// flex-basis: 50%;
+			flex-grow: 1;
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-end;
+			align-items: center;
+			flex-wrap: wrap;
+			#group {
+				display: none;
+			}
+		}
+	}
+	.body-resalt {
+		margin: 70px 0 60px;
+		.list-items-resalts {
+			.item-resalts {
+				a{
+					display: flex;
+					flex-direction: row;
+					justify-content: space-between;
+					align-items: flex-start;
+					flex-wrap: wrap;
+					padding: 20px 0;
+					text-decoration: none;
+					color: #000;
+				}
+				.wrapp-img {
+					flex-basis: 15%;
+					img {
+						width: 100%;
+					}
+				}
+				.info-item-resalt {
+					flex-basis: 85%;
+					display: flex;
+					flex-direction: row;
+					justify-content: space-between;
+					align-items: center;
+					flex-wrap: wrap;
+					padding: 0 20px;	
+					div {
+						flex-basis: 70%;
+    					flex-grow: 1;
+					}
+					p {
+						color: $grey;
+					}
+					.price {
+						
+					}
+				}
+				
+
+			}
+		}
+	}
+	
+}
+
+
+input[type=checkbox] {
+	display: none;
+}
+label.checkbox-custom__check {
+	background-color: rgba(0,0,0,0);
+	color: #757e1f;
+    font-family: pf_medium;
+    margin-right: 5%;
+    font-size: 0rem;
+    border: 2px solid $grey;
+	padding: 20px;
+	border-radius: 5px;
+	background-image: url(../img/icons/check.png);
+	background-size: 85%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: block;
+    width: 20px;
+    height: 20px;
+}
+
+input[type=checkbox]:checked + label.checkbox-custom__check {
+	background-image: url(../img/icons/no.png);
+}
+
+
+// --------------
+// filter resalts item
+// --------------
+
+
+.wrapp_filter_result_item {
+	margin: 70px 20px;
+	p {
+		color: $grey;
+	}
+	img {
+		width: 100%;
+		max-width: 100%;
+		margin: 40px 0 70px 0;
+	}
+	.btn {
+		margin-bottom: 70px;
+	}
+	ul {
+		padding: 0 15%;
+		 li  {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+			flex-wrap: wrap;
+			padding: 15px 0;
+			border-bottom: 1px solid $grey;
+			.grey {
+				color: $grey_dark;
+				span {
+					padding-left: 7px;
+				}
+			}
+			h4 {
+				span {
+					position: relative;
+					font-size: 1.3rem;
+					top: -9px;
+    				left: -5px;
+				}
+			}
+		}
+	}
 }
