--- a/src/sass/lib/_variables.sass
+++ b/src/sass/lib/_variables.sass
@@ -8,6 +8,7 @@ $white: #fff
 $black: #000
 $prime-color: #b6c527;
 $grey: #d1d1d1;
+$grey_dark: #858585;
 $font_size: 10px;
 
 $font_m: 'pf_medium';
