--- a/src/pug/filters.pug
+++ b/src/pug/filters.pug
@@ -12,7 +12,7 @@ block content
 	
 	seciton.title-filters
 		div.wrapp_filters
-			h3.filters-h3 Подборка квартиры по параметрам
+			h3.filters-h3 Подборка квартиры <span> по параметрам </span>
 			img
 			div.tabs
 				+btn('btn-white btn-tab_left js_tab', 'Быстрый', 'tab1')
@@ -51,12 +51,8 @@ block content
 									p.filter-text_main Дополнительно
 								div.filter-value
 									select.selectUi(name="select")
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower
+										option С отделкой
+										option Без отделки
 
 						+btn('btn-white btn-center btn-uppercase btn-text_dark-green','Найти квартиру')
 						a 
@@ -67,7 +63,16 @@ block content
 						ul.tabs-fast_list
 							li.tabs-fast_list_item.js_ui_slider(data-min='0' data-max='1000' data-step='10' data-default-value-to='100' data-default-value-from='500')
 								div.filter-text
-									p.filter-text_main Стоимость, тыс $
+									p.filter-text_main Площадь, м <sup>2</sup>
+									p.filter-text_secondary
+										label.js_ui_slider_label
+										input.js_ui_slider_input(type="text" disabled)
+								div.filter-value
+									div.js_ui_slider_main
+
+							li.tabs-fast_list_item.js_ui_slider(data-min='0' data-max='1000' data-step='10' data-default-value-to='100' data-default-value-from='500')
+								div.filter-text
+									p.filter-text_main Жилая площадь, м <sup>2</sup>
 									p.filter-text_secondary
 										label.js_ui_slider_label
 										input.js_ui_slider_input(type="text" disabled)
@@ -85,16 +90,7 @@ block content
 
 							li.tabs-fast_list_item.js_ui_slider(data-min='0' data-max='1000' data-step='10' data-default-value-to='100' data-default-value-from='500')
 								div.filter-text
-									p.filter-text_main Стоимость, тыс $
-									p.filter-text_secondary
-										label.js_ui_slider_label
-										input.js_ui_slider_input(type="text" disabled)
-								div.filter-value
-									div.js_ui_slider_main
-
-							li.tabs-fast_list_item.js_ui_slider(data-min='0' data-max='1000' data-step='10' data-default-value-to='100' data-default-value-from='500')
-								div.filter-text
-									p.filter-text_main Стоимость, тыс $
+									p.filter-text_main Цена $/м <sup>2</sup>
 									p.filter-text_secondary
 										label.js_ui_slider_label
 										input.js_ui_slider_input(type="text" disabled)
@@ -104,39 +100,33 @@ block content
 
 							li.tabs-fast_list_item
 								div.filter-text
-									p.filter-text_main Дополнительно
+									p.filter-text_main Квартал
 								div.filter-value
 									select.selectUi(name="select")
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower
+										option Все
+										option Кедровый
+										option Сосновый
 
 							li.tabs-fast_list_item
 								div.filter-text
-									p.filter-text_main Дополнительно
+									p.filter-text_main Дом
 								div.filter-value
 									select.selectUi(name="select")
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower
+										option Все
+										option 1
+										option 2
+										option 3
 
 							li.tabs-fast_list_item
 								div.filter-text
-									p.filter-text_main Дополнительно
+									p.filter-text_main Подъезд
 								div.filter-value
 									select.selectUi(name="select")
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower		
+										option Все
+										option 1
+										option 2
+										option 3
+
 							li.tabs-fast_list_item
 								div.filter-text
 									p.filter-text_main Комнаты
@@ -158,12 +148,10 @@ block content
 									p.filter-text_main Дополнительно
 								div.filter-value
 									select.selectUi(name="select")
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower
-										option Slower
+										option Лоджия, отделка, погреб
+										option Лоджия, отделка, погреб
+										option Лоджия, отделка, погреб
+										option Лоджия, отделка, погреб
 						+btn('btn-white btn-center btn-uppercase btn-text_dark-green','Найти квартиру')
 						a 
 							p.link_reset &times; Сбросить все
