--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -1,3 +1,41 @@
+@media (max-width: 710px) {
+	.title-h3-wrapp {
+		.title-h3 {
+			span {
+				display: none;
+			}
+		}
+	}
+}
+@media (max-width: 670px) {
+	.wrapp_filters {
+		padding: 50px 20px;
+		.tabs-content_filters {
+			.tabs-fast, .tabs-deployed	{
+				.tabs-fast_list {
+					.tabs-fast_list_item {
+						padding: 15px 0;
+						.filter-text{
+							flex-basis: 100% !important;
+							padding: 0;
+							margin-bottom: 20px;
+						}
+						.filter-value { 
+							flex-basis: 100% !important;
+							padding: 0;
+						}
+					}
+				}
+			}	
+		}
+	}
+	.wrapp_filter_result_item {
+		ul {
+			padding: 0 20px;
+		}
+	}
+}
+
 @media (max-width: 610px) {
 	// html {
 	// 	font-size: 7px;
@@ -77,6 +115,7 @@
 	// --------------
 	// foto_galerias
 	// --------------
+
 	.wrapp_foto_galerias .foto_galerias-item {
 		width: 100%;
 	}
@@ -111,6 +150,79 @@
 		}
 
 	}
-	
-	
+
+	// --------------
+	// filter_resalts 
+	// --------------
+
+	.wrapp_resalt {
+		.header-resalt {
+			.group_chechbox, .title-h3-wrapp {
+				flex-basis: 100%;
+				border-top:  2px solid $grey;
+			}
+			.title-h3-wrapp {
+				text-align: center;
+				padding: 25px 0;
+			}
+			.group_chechbox {
+				padding-top: 25px;
+				justify-content: center;
+			}
+			
+			    
+		}
+	}
+}
+
+
+@media (max-width: 375px) {
+	html {
+		font-size: 9px;
+	}
+	.wrapp_filters {
+		padding: 30px 10px;
+		.filters-h3 {
+			span {
+				display: none;
+			}
+		}
+		.tabs {
+			button {
+				padding: 16px 15px;
+			}
+		}
+		label.checkbox-custom {
+			margin-right: 2%;
+		}
+		.btn {
+			padding: 20px 25px;
+		}
+		.tabs-content_filters {
+			.tabs-fast, .tabs-deployed	{
+				.tabs-fast_list {
+					.tabs-fast_list_item {
+						padding: 15px 0;
+						.filter-text{
+							flex-basis: 100% !important;
+							padding: 0;
+							margin-bottom: 20px;
+						}
+						.filter-value { 
+							flex-basis: 100% !important;
+							padding: 0;
+						}
+					}
+				}
+			}	
+		}
+	}
+	.wrapp_resalt .header-resalt .group_chechbox p {
+		padding-top: 10px;
+	}
+	.wrapp_resalt .body-resalt {
+		margin: 40px 0;
+	}
+			
+
 }
