--- a/bitrix/templates/main/filters-resalt-item.html
+++ b/bitrix/templates/main/filters-resalt-item.html
@@ -11,7 +11,7 @@
   <body>
     <!--BEGIN out-->
     <div class="out">
-      <div class="menu_mobile">
+      <div class="menu_mobile js_menu_mobile_open">
         <footer class="footer footer__menu">
           <div class="menu-title">
             <h3 class="border-bottom"> <a>Кедровый квартал</a></h3>
@@ -42,6 +42,25 @@
           </ul>
         </footer>
       </div>
+      <div class="menu_mobile modal js_modal_mobile_open">
+        <div class="footer footer__menu">
+          <div class="header"></div>
+          <div class="menu-title">
+            <h3 class="border-bottom">Заявка		</h3>
+            <form>
+              <h4>Имя</h4>
+              <input class="btn-white_white-border" type="text">
+              <h4>Телфон</h4>
+              <input class="btn-white_white-border" type="tel">
+              <h4>E-mail</h4>
+              <input class="btn-white_white-border" type="email">
+              <h4>Сообщение</h4>
+              <textarea class="btn-white_white-border" rows="10"></textarea><a src="">
+                      <button class="btn btn-white btn-uppercase btn-center">Оставить заявку</button></a>
+            </form>
+          </div>
+        </div>
+      </div>
       <header class="header"><img class="header__logo" src="img/logo.png">
         <p class="header__text">+375 29 000 00 00</p>
         <div class="header__menu">
@@ -57,7 +76,7 @@
         <div class="wrapp_filter_result_item">
           <h3>1-комната, 44,92 м <sup>2</sup></h3>
           <p>Кедровый квартал</p><img src="img/house-shema.png"><a src="">
-                  <button class="btn btn-green btn-uppercase btn-center">Оставить заявку</button></a>
+                  <button class="btn btn-green btn-uppercase btn-center js_form_order">Оставить заявку</button></a>
           <ul>
             <li>
               <h4>Дом </h4>
