--- a/src/pug/filters-resalt-item.pug
+++ b/src/pug/filters-resalt-item.pug
@@ -7,6 +7,7 @@ block content
 	include includes/_sliders
 	include includes/_btn
 	include includes/_menu
+	include includes/_modal
 
 	include includes/_header
 	
@@ -19,7 +20,7 @@ block content
 			h3 1-комната, 44,92 м <sup>2</sup>
 			p Кедровый квартал
 			img(src='img/house-shema.png')
-			+btn('btn-green btn-uppercase btn-center','Оставить заявку')
+			+btn('btn-green btn-uppercase btn-center js_form_order','Оставить заявку')
 			ul
 				li
 					h4 Дом 
