--- a/bitrix/templates/main/filters.html
+++ b/bitrix/templates/main/filters.html
@@ -11,7 +11,7 @@
   <body>
     <!--BEGIN out-->
     <div class="out">
-      <div class="menu_mobile">
+      <div class="menu_mobile js_menu_mobile_open">
         <footer class="footer footer__menu">
           <div class="menu-title">
             <h3 class="border-bottom"> <a>Кедровый квартал</a></h3>
