--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -559,3 +559,41 @@
 .ui-selectmenu-button.ui-button {
 	width: 100%;
 }
+
+
+// --------------
+// modal
+// --------------
+
+
+.modal {
+	input,textarea {
+		border-radius: 5px;
+		padding: 20px;
+		font-size: 1.5rem;
+		width: 98%;
+   		margin: 0 1% 20px;
+
+	}
+	h4 {
+		margin: 0 1%;
+		margin-top: 20px;
+	}
+	.footer__menu {
+		h3 {
+			border-bottom: none;
+		}
+	}
+	
+	.footer__menu {
+		.menu-title {
+			form {
+				.btn {
+					margin: 15px auto;
+				}
+			}
+		}
+
+	}
+	
+}
