'fix_bug_issue'

--- a/src/pug/about-quarter.pug
+++ b/src/pug/about-quarter.pug
@@ -9,53 +9,54 @@ block content
 	include includes/_menu
 
 	include includes/_header
-	
-	section.title-logo_quarter
-		div.logo_quarter
-			img(src='img/kedr_logo.png' alt='Кедровый квартал')
-	nav.title-breadcrumbs
-		ul.breadcrumbs
-			li 
-				a Главная /
-	section.title-about_quarter
-		div.wrapp_about_quarter
-			h3.about_quarter-h3 О кедровом квартале
-			p.about_quarter-description Кедровый — первый из 11 кварталов Новой Боровой. До конца 2018 года в квартале завершится строительство всех квартир и детского садика на 150 мест. Жители первых трех домов уже получили ключи от своих квартир и смогли оценить комфорт и уют нового района.
-			-var slider_1 = [	{img: 'img/slide1.jpg', text: '1Красивые, счастливые и интересные – это ваши новые соседи!'}, {img: 'img/slide1.jpg', text: 'Красивые, счастливые и интересные – это ваши новые соседи!'}, {img: 'img/slide1.jpg', text: '2Красивые, счастливые и интересные – это ваши новые соседи!'} ]
-			+slider("false", "true", 1, 1, slider_1, 4)
-	section.title-about_number
-		div.wrapp_about_number
-			ul.about_number-list
+	div.wrapp-about-quarter-page
+		section.title-logo_quarter
+			div.logo_quarter
+				img.logo_quarter__ipad(src='img/kedr_logo.png' alt='Кедровый квартал')
+				img.logo_quarter__iphone(src='img/kedr_logo_iphone.png' alt='Кедровый квартал')
+			
+				
+		nav.title-breadcrumbs
+			ul.breadcrumbs
 				li 
-					h4 2018
-					p До конца 2018 года в квартале завершится строительство всех квартир. 
-				li
-					h4 150
-					p мест для детей в современном садике, который откроется в 2018 году.
-				li
-					h4 Кедр
-					p символ квартала, олицетворяет процветание, долголетие и благополучие.
-				li
-					h4 Лаймовый
-					p фирменный цвет, заряжает бодростью и хорошим настроением.
-	section.title-about_quarter
-		div.wrapp_about_quarter
-			h4.about_quarter-h4 Развитая инфраструктура
-			p.about_quarter-description Центральная площадь с амфитеатром, «сухим »фонтаном и спортивными зонами и летним кафе.
-			-var slider_4 = [	{img: 'img/slide1.jpg', text: 'Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.'}, {img: 'img/slide1.jpg', text: 'Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.'}, {img: 'img/slide1.jpg', text: 'Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.'} ]
-			+slider("false", "true", 1, 1, slider_4, 4)
-	section.title-about_text
-		div.wrapp_about_text
-			p В домах – лифты от проверенных мировых производителей, лестничные проемы с полным остеклением, инфодоски, грифельные стены для общения с соседями, стеклянные прозрачные двери на входе, корзины для спама рядом с почтовыми ящиками, удобная навигация по этажам.
-			p Квартиры с нестандартной / полусвободной планировкой, квартиры-студии.
-			img(src='img/new_borovaya.jpg')
-			p Велосипедная и беговая дорожки, пешие маршруты, ворк-аут и фитнес-зоны, стадион, баскетбольная площадка, зимний каток и др.
-			p Скандинавский стиль зон отдыха, много светлого дерева, ландшафтный дизайн во дворах.
-			p И конечно же, Кедровому кварталу присущи все свойства и характеристики района в целом!
+					a(href='#') Главная /
+		section.title-about_quarter
+			div.wrapp_about_quarter
+				h3.about_quarter-h3 О кедровом квартале
+				p.about_quarter-description Кедровый — первый из 11 кварталов Новой Боровой. До конца 2018 года в квартале завершится строительство всех квартир и детского садика на 150 мест. Жители первых трех домов уже получили ключи от своих квартир и смогли оценить комфорт и уют нового района.
+				-var slider_1 = [	{img: 'img/slide1.jpg', text: '1Красивые, счастливые и интересные – это ваши новые соседи!'}, {img: 'img/slide1.jpg', text: 'Красивые, счастливые и интересные – это ваши новые соседи!'}, {img: 'img/slide1.jpg', text: '2Красивые, счастливые и интересные – это ваши новые соседи!'} ]
+				+slider("false", "true", 1, 1, slider_1, 4)
+		section.title-about_number
+			div.wrapp_about_number
+				ul.about_number-list
+					li 
+						h4 2018
+						p До конца 2018 года в квартале завершится строительство всех квартир. 
+					li
+						h4 150
+						p мест для детей в современном садике, который откроется в 2018 году.
+					li
+						h4 Кедр
+						p символ квартала, олицетворяет процветание, долголетие и благополучие.
+					li
+						h4 Лаймовый
+						p фирменный цвет, заряжает бодростью и хорошим настроением.
+		section.title-about_quarter
+			div.wrapp_about_quarter
+				h4.about_quarter-h4 Развитая инфраструктура
+				p.about_quarter-description Центральная площадь с амфитеатром, «сухим »фонтаном и спортивными зонами и летним кафе.
+				-var slider_4 = [	{img: 'img/slide1.jpg', text: 'Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.'}, {img: 'img/slide1.jpg', text: 'Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.'}, {img: 'img/slide1.jpg', text: 'Игровые площадки от ведущих мировых брендов, а также построенные по собственным специально разработанным дизайн-проектам.'} ]
+				+slider("false", "true", 1, 1, slider_4, 4)
+		section.title-about_text
+			div.wrapp_about_text
+				p В домах – лифты от проверенных мировых производителей, лестничные проемы с полным остеклением, инфодоски, грифельные стены для общения с соседями, стеклянные прозрачные двери на входе, корзины для спама рядом с почтовыми ящиками, удобная навигация по этажам.
+				p Квартиры с нестандартной / полусвободной планировкой, квартиры-студии.
+				img(src='img/new_borovaya.jpg')
+				p Велосипедная и беговая дорожки, пешие маршруты, ворк-аут и фитнес-зоны, стадион, баскетбольная площадка, зимний каток и др.
+				p Скандинавский стиль зон отдыха, много светлого дерева, ландшафтный дизайн во дворах.
+				p И конечно же, Кедровому кварталу присущи все свойства и характеристики района в целом!
 
-
-	
-	include includes/_link_back
+		include includes/_link_back
 	include includes/_footer
 	
 
