--- a/src/sass/_primary.scss
+++ b/src/sass/_primary.scss
@@ -48,7 +48,9 @@ ul { list-style-type: none; }
 .no_margin {
 	margin: 0 !important;
 }
-
 .hidden {
 	display: none !important;
+}
+.text-center {
+	text-align: center;
 }
