--- a/bitrix/templates/main/contacts.html
+++ b/bitrix/templates/main/contacts.html
@@ -12,135 +12,136 @@
     <!--BEGIN out-->
     <div class="out">
       <div class="menu_mobile js_menu_mobile_open">
-        <footer class="footer footer__menu">
+        <div class="footer footer__menu">
+          <div class="wrapp-menu-logo"><img class="menu-logo" src="img/logo_white.png" alt="logo">
+            <p class="js-menu-open"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.3 54.4" enable-background="new 0 0 54.3 54.4" xml:space="preserve"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.7,4.8l2.5-2.5l48.8,48.8l-2.5,2.5L0.7,4.8z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M3.2,2.3L5.5,0l48.8,48.8l-2.3,2.3L3.2,2.3z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M49.2,0.4l2.5,2.5L2.5,52.1L0,49.6L49.2,0.4z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M51.6,2.9L54,5.2L4.8,54.4l-2.4-2.4L51.6,2.9z"/></svg></p>
+          </div>
           <div class="menu-title">
-            <h3 class="border-bottom"> <a>Кедровый квартал</a></h3>
-            <ul class="links_quarter links_quarter-drop">
-              <li> <a>О квартале</a></li>
-              <li> <a>Цены и условия</a></li>
-              <li> <a>Фотогалерея</a></li>
-            </ul>
-            <h3> <a>Сосновый квартал</a></h3>
-          </div><a src="">
-                  <button class="btn btn-white btn-center btn-uppercase">подобрать квартиру</button></a>
+            <div class="wrapper-kedr border-bottom">
+              <h3 id="js-title-kedr-menu"> <a href="#">Кедровый квартал</a></h3>
+              <ul class="links_quarter links_quarter-drop" id="js-title-kedr-content">
+                <li> <a href="#">О квартале</a></li>
+                <li> <a href="#">Цены и условия</a></li>
+                <li> <a href="#">Фотогалерея</a></li>
+              </ul>
+            </div>
+            <h3> <a href="#">Сосновый квартал</a></h3>
+          </div><a class="btn btn-white btn-center btn-uppercase">подобрать квартиру</a>
           <ul class="links_quarter">
-            <li> <a>Программа лояльности</a></li>
-            <li> <a>О застройщике</a></li>
-            <li><a>Акции</a></li>
-            <li><a>Новости</a></li>
-            <li><a>Отдел продаж</a></li>
-            <li><a>Акции</a></li>
-            <li><a>Новости</a></li>
-            <li><a>Отдел продаж</a></li>
+            <li> <a href="#">Программа лояльности</a></li>
+            <li> <a href="#">О застройщике</a></li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Отдел продаж</a></li>
           </ul>
-          <h3>+375 29 300 00 00</h3><a src="">
-                  <button class="btn btn-opasity btn-center btn-uppercase">Обратный звонок</button></a>
+          <h3>+375 29 300 00 00</h3>
+                <button class="btn btn-opasity btn-center btn-uppercase">Обратный звонок</button>
           <ul class="social_links">
-            <li><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></li>
-            <li><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></li>
-            <li><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></li>
+            <li><a href="#"><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></a></li>
+            <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></a></li>
+            <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></a></li>
           </ul>
-        </footer>
+        </div>
       </div>
       <header class="header"><img class="header__logo" src="img/logo.png">
-        <p class="header__text">+375 29 000 00 00</p>
-        <div class="header__menu">
-          <input type="checkbox" id="hamburger" hidden="hidden">
-          <label class="hamburger" for="hamburger" id="menu"><span></span><span></span><span></span></label>
+        <p class="header__text header__text-ipad">+375 29 000 00 00</p>
+        <div class="header__menu" id="header__menu">
+          <label class="hamburger js-menu-open" for="hamburger" id=""><span></span><span></span><span></span></label>
         </div>
-        <h3 class="header__text-iphone">+375 29 000 00 00</h3>
       </header>
-      <nav class="title-breadcrumbs">
-        <ul class="breadcrumbs">
-          <li> <a>Главная /</a></li>
-        </ul>
-      </nav>
-      <section class="title-map_and_contact">
-        <div class="sales-dep">
-          <h3 class="sales-dep_title">Отдел продаж</h3>
-          <div class="block-contact">
-            <ul>
-              <li>Адрес</li>
-              <li>ул. Леонардо Да Винчи, 2</li>
-              <li>д. Копище, Минский р-н</li>
-            </ul>
-            <ul>
-              <li>Телефоны</li>
-              <li>+375 29 300-00-00</li>
-              <li>+375 29 300-00-00</li>
-              <li>+375 29 300-00-00</li>
-            </ul>
-            <ul>
-              <li>Режим работы</li>
-              <li>ПН...ПТ 8:30 &mdash; 20:00</li>
-              <li>CБ, BC 10:00 &mdash; 16:00</li>
-            </ul>
-          </div>
-        </div>
-        <div class="map">
-          <div id="map" style="width: 100%; height: 400px; margin-bottom: 30px"></div><a src="">
-                  <button class="btn btn-green_border btn-uppercase">построить маршрут</button></a>
-        </div>
-      </section>
-      <section class="how_search">
-        <div class="how_to_get">
-          <p>Как добраться</p>
-          <div class="accordion">
-            <div class="accordion-item">
-              <div id="transport"><span class="read-other read-other_black">Общественный транспорт</span></div>
-              <div class="read-other__close" id="transport-open">
-                <h3>Автобусы, Троллейбусы</h3>
-                <p>34 3643 783742</p>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <div id="auto"> <span class="read-other read-other_black">Автомобиль</span></div>
-              <div class="read-other__close" id="auto-open">
-                <h3>Автобусы, Троллейбусы</h3>
-                <p>34 3643 783742</p>
-              </div>
+      <h3 class="header__text-iphone">+375 29 000 00 00</h3>
+      <div class="wrapp-contacts-page">
+        <nav class="title-breadcrumbs">
+          <ul class="breadcrumbs">
+            <li> <a href="#">Главная /</a></li>
+          </ul>
+        </nav>
+        <section class="title-map_and_contact">
+          <div class="sales-dep">
+            <h3 class="sales-dep_title">Отдел продаж</h3>
+            <div class="block-contact">
+              <ul>
+                <li>Адрес</li>
+                <li>ул. Леонардо Да Винчи, 2</li>
+                <li>д. Копище, Минский р-н</li>
+              </ul>
+              <ul>
+                <li>Телефоны</li>
+                <li>+375 29 300-00-00</li>
+                <li>+375 29 300-00-00</li>
+                <li>+375 29 300-00-00</li>
+              </ul>
+              <ul>
+                <li>Режим работы</li>
+                <li>ПН...ПТ 8:30 &mdash; 20:00</li>
+                <li>CБ, BC 10:00 &mdash; 16:00</li>
+              </ul>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="title-back_link">
-        <div class="back_link"><a class="links" href="/">
-             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 135 100"><path d="m43.49579,3.54208c1.87973,-1.87971 4.83902,-1.87971 6.71872,0c1.81622,1.81622 1.81622,4.83902 0,6.651l-34.06784,34.06787l112.41928,0c2.62061,0 4.77127,2.08295 4.77127,4.70354c0,2.62061 -2.15067,4.77129 -4.77127,4.77129l-112.41928,0l34.06784,34.00435c1.81622,1.87971 1.81622,4.90675 0,6.71873c-1.8797,1.87973 -4.83899,1.87973 -6.71872,0l-42.13289,-42.13287c-1.81622,-1.81622 -1.81622,-4.83902 0,-6.651l42.13289,-42.1329l0,-0.00001z" stroke-width="0"/></svg><span> Назад на главную</span></a></div>
-      </section>
+          <div class="map">
+            <div id="map" style="width: 100%; height: 400px; margin-bottom: 30px" data-center-x="55.76" data-center-y="37.64" data-zoom="7" data-marker-x="55.76" data-marker-y="37.64"></div><a class="btn btn-green_border btn-uppercase" href="#">построить маршрут</a>
+          </div>
+        </section>
+        <section class="how_search">
+          <div class="how_to_get">
+            <p>Как добраться</p>
+            <div class="accordion">
+              <div class="accordion-item">
+                <div id="transport"><span class="read-other read-other_black">Общественный транспорт</span></div>
+                <div class="read-other__close" id="transport-open">
+                  <h3>Автобусы, Троллейбусы</h3>
+                  <p>34 3643 783742</p>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <div id="auto"> <span class="read-other read-other_black">Автомобиль</span></div>
+                <div class="read-other__close" id="auto-open">
+                  <h3>Автобусы, Троллейбусы</h3>
+                  <p>34 3643 783742</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="title-back_link">
+          <div class="back_link"><a class="links" href="/">
+               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 135 100"><path d="m43.49579,3.54208c1.87973,-1.87971 4.83902,-1.87971 6.71872,0c1.81622,1.81622 1.81622,4.83902 0,6.651l-34.06784,34.06787l112.41928,0c2.62061,0 4.77127,2.08295 4.77127,4.70354c0,2.62061 -2.15067,4.77129 -4.77127,4.77129l-112.41928,0l34.06784,34.00435c1.81622,1.87971 1.81622,4.90675 0,6.71873c-1.8797,1.87973 -4.83899,1.87973 -6.71872,0l-42.13289,-42.13287c-1.81622,-1.81622 -1.81622,-4.83902 0,-6.651l42.13289,-42.1329l0,-0.00001z" stroke-width="0"/></svg><span> Назад на главную</span></a></div>
+        </section>
+      </div>
       <footer class="footer footer__footer">
         <ul class="links_quarter">
           <li> 
-            <h3> <a>Кедровый квартал</a></h3>
+            <h3> <a href="#">Кедровый квартал</a></h3>
           </li>
-          <li> <a>О квартале</a></li>
-          <li> <a>Цены и условия</a></li>
-          <li> <a>Фотогалерея</a></li>
+          <li> <a href="#">О квартале</a></li>
+          <li> <a href="#">Цены и условия</a></li>
+          <li> <a href="#">Фотогалерея</a></li>
           <li> 
-            <h3> <a>Сосновый квартал</a></h3>
+            <h3> <a href="#">Сосновый квартал</a></h3>
           </li>
         </ul>
         <ul class="links_all">
           <li> 
-            <h3> <a>Программа лояльности</a></h3>
+            <h3> <a href="#">Программа лояльности</a></h3>
           </li>
           <li> 
-            <h3> <a>Новости и акции</a></h3>
+            <h3> <a href="#">Новости и акции</a></h3>
           </li>
           <li> 
-            <h3> <a>Отдел продаж</a></h3>
+            <h3> <a href="#">Отдел продаж</a></h3>
           </li>
           <li> 
             <h3> </h3>
           </li>
-        </ul><a src="">
-                <button class="btn btn-green btn-center btn-uppercase">подобрать квартиру</button></a>
+        </ul>
+              <button class="btn btn-green btn-center btn-uppercase">подобрать квартиру</button>
         <ul class="social_links">
-          <li><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></li>
-          <li><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></li>
-          <li><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></li>
+          <li><a href="#"><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></a></li>
+          <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></a></li>
+          <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></a></li>
         </ul>
         <p class="footer_info">&copy; 2016, ООО "Астродевелопмент", УНП 691759953 </p>
-        <p class="footer_info">Made in <span>Flex Media</span></p>
+        <p class="footer_info">Made in <span> <a class="links" href="#">Flex Media</a></span></p>
       </footer>
     </div>
     <!--END out-->
