--- a/bitrix/templates/main/filters.html
+++ b/bitrix/templates/main/filters.html
@@ -12,52 +12,52 @@
     <!--BEGIN out-->
     <div class="out">
       <div class="menu_mobile js_menu_mobile_open">
-        <footer class="footer footer__menu">
+        <div class="footer footer__menu">
+          <div class="wrapp-menu-logo"><img class="menu-logo" src="img/logo_white.png" alt="logo">
+            <p class="js-menu-open"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.3 54.4" enable-background="new 0 0 54.3 54.4" xml:space="preserve"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.7,4.8l2.5-2.5l48.8,48.8l-2.5,2.5L0.7,4.8z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M3.2,2.3L5.5,0l48.8,48.8l-2.3,2.3L3.2,2.3z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M49.2,0.4l2.5,2.5L2.5,52.1L0,49.6L49.2,0.4z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M51.6,2.9L54,5.2L4.8,54.4l-2.4-2.4L51.6,2.9z"/></svg></p>
+          </div>
           <div class="menu-title">
-            <h3 class="border-bottom"> <a>Кедровый квартал</a></h3>
-            <ul class="links_quarter links_quarter-drop">
-              <li> <a>О квартале</a></li>
-              <li> <a>Цены и условия</a></li>
-              <li> <a>Фотогалерея</a></li>
-            </ul>
-            <h3> <a>Сосновый квартал</a></h3>
-          </div><a src="">
-                  <button class="btn btn-white btn-center btn-uppercase">подобрать квартиру</button></a>
+            <div class="wrapper-kedr border-bottom">
+              <h3 id="js-title-kedr-menu"> <a href="#">Кедровый квартал</a></h3>
+              <ul class="links_quarter links_quarter-drop" id="js-title-kedr-content">
+                <li> <a href="#">О квартале</a></li>
+                <li> <a href="#">Цены и условия</a></li>
+                <li> <a href="#">Фотогалерея</a></li>
+              </ul>
+            </div>
+            <h3> <a href="#">Сосновый квартал</a></h3>
+          </div><a class="btn btn-white btn-center btn-uppercase">подобрать квартиру</a>
           <ul class="links_quarter">
-            <li> <a>Программа лояльности</a></li>
-            <li> <a>О застройщике</a></li>
-            <li><a>Акции</a></li>
-            <li><a>Новости</a></li>
-            <li><a>Отдел продаж</a></li>
-            <li><a>Акции</a></li>
-            <li><a>Новости</a></li>
-            <li><a>Отдел продаж</a></li>
+            <li> <a href="#">Программа лояльности</a></li>
+            <li> <a href="#">О застройщике</a></li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Отдел продаж</a></li>
           </ul>
-          <h3>+375 29 300 00 00</h3><a src="">
-                  <button class="btn btn-opasity btn-center btn-uppercase">Обратный звонок</button></a>
+          <h3>+375 29 300 00 00</h3>
+                <button class="btn btn-opasity btn-center btn-uppercase">Обратный звонок</button>
           <ul class="social_links">
-            <li><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></li>
-            <li><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></li>
-            <li><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></li>
+            <li><a href="#"><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></a></li>
+            <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></a></li>
+            <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></a></li>
           </ul>
-        </footer>
+        </div>
       </div>
       <header class="header"><img class="header__logo" src="img/logo.png">
-        <p class="header__text">+375 29 000 00 00</p>
-        <div class="header__menu">
-          <input type="checkbox" id="hamburger" hidden="hidden">
-          <label class="hamburger" for="hamburger" id="menu"><span></span><span></span><span></span></label>
+        <p class="header__text header__text-ipad">+375 29 000 00 00</p>
+        <div class="header__menu" id="header__menu">
+          <label class="hamburger js-menu-open" for="hamburger" id=""><span></span><span></span><span></span></label>
         </div>
-        <h3 class="header__text-iphone">+375 29 000 00 00</h3>
       </header>
+      <h3 class="header__text-iphone">+375 29 000 00 00</h3>
       <seciton class="title-filters">
         <div class="wrapp_filters">
           <h3 class="filters-h3">Подборка квартиры <span> по параметрам </span></h3><img>
-          <div class="tabs"><a src="">
-                    <button class="btn btn-white btn-tab_left js_tab" data-tab="tab1">Быстрый</button></a><a src="">
-                    <button class="btn btn-white_white-border btn-tab_right js_tab" data-tab="tab2">Развернутый</button></a>
+          <div class="tabs">
+                  <button class="btn btn-white btn-tab_left js_tab" data-tab="tab1" data-add="btn-white" data-remove="btn-white_white-border">Быстрый</button>
+                  <button class="btn btn-white_white-border btn-tab_right js_tab" data-tab="tab2" data-add="btn-white" data-remove="btn-white_white-border">Развернутый</button>
           </div>
-          <div class="tabs-content_filters">
+          <div class="tabs-content_filters js-tabs-content">
             <div class="tabs-fast js_tab_item" data-tab-container="tab1">
               <form>
                 <ul class="tabs-fast_list">
@@ -67,6 +67,8 @@
                       <p class="filter-text_secondary">
                         <label class="js_ui_slider_label"></label>
                         <input class="js_ui_slider_input" type="text" disabled>
+                        <input class="hidden js_ui_slider_value_top">
+                        <input class="hidden js_ui_slider_value_bottom">
                       </p>
                     </div>
                     <div class="filter-value">
@@ -99,9 +101,11 @@
                       </select>
                     </div>
                   </li>
-                </ul><a src="">
-                        <button class="btn btn-white btn-center btn-uppercase btn-text_dark-green">Найти квартиру</button></a><a> 
-                  <p class="link_reset">&times; Сбросить все</p></a>
+                </ul>
+                <div class="wrapp-search-btn">
+                        <button class="btn btn-white btn-center btn-uppercase btn-text_dark-green">Найти квартиру</button><a> 
+                    <p class="link_reset">&times; Сбросить все</p></a>
+                </div>
               </form>
             </div>
             <div class="tabs-deployed js_tab_item hidden" data-tab-container="tab2">
@@ -113,6 +117,8 @@
                       <p class="filter-text_secondary">
                         <label class="js_ui_slider_label"></label>
                         <input class="js_ui_slider_input" type="text" disabled>
+                        <input class="hidden js_ui_slider_value_top">
+                        <input class="hidden js_ui_slider_value_bottom">
                       </p>
                     </div>
                     <div class="filter-value">
@@ -125,6 +131,8 @@
                       <p class="filter-text_secondary">
                         <label class="js_ui_slider_label"></label>
                         <input class="js_ui_slider_input" type="text" disabled>
+                        <input class="hidden js_ui_slider_value_top">
+                        <input class="hidden js_ui_slider_value_bottom">
                       </p>
                     </div>
                     <div class="filter-value">
@@ -137,6 +145,8 @@
                       <p class="filter-text_secondary">
                         <label class="js_ui_slider_label"></label>
                         <input class="js_ui_slider_input" type="text" disabled>
+                        <input class="hidden js_ui_slider_value_top">
+                        <input class="hidden js_ui_slider_value_bottom">
                       </p>
                     </div>
                     <div class="filter-value">
@@ -149,6 +159,8 @@
                       <p class="filter-text_secondary">
                         <label class="js_ui_slider_label"></label>
                         <input class="js_ui_slider_input" type="text" disabled>
+                        <input class="hidden js_ui_slider_value_top">
+                        <input class="hidden js_ui_slider_value_bottom">
                       </p>
                     </div>
                     <div class="filter-value">
@@ -221,9 +233,11 @@
                       </select>
                     </div>
                   </li>
-                </ul><a src="">
-                        <button class="btn btn-white btn-center btn-uppercase btn-text_dark-green">Найти квартиру</button></a><a> 
-                  <p class="link_reset">&times; Сбросить все</p></a>
+                </ul>
+                <div class="wrapp-search-btn">
+                        <button class="btn btn-white btn-center btn-uppercase btn-text_dark-green">Найти квартиру</button><a> 
+                    <p class="link_reset">&times; Сбросить все</p></a>
+                </div>
               </form>
             </div>
           </div>
@@ -232,37 +246,37 @@
       <footer class="footer footer__footer">
         <ul class="links_quarter">
           <li> 
-            <h3> <a>Кедровый квартал</a></h3>
+            <h3> <a href="#">Кедровый квартал</a></h3>
           </li>
-          <li> <a>О квартале</a></li>
-          <li> <a>Цены и условия</a></li>
-          <li> <a>Фотогалерея</a></li>
+          <li> <a href="#">О квартале</a></li>
+          <li> <a href="#">Цены и условия</a></li>
+          <li> <a href="#">Фотогалерея</a></li>
           <li> 
-            <h3> <a>Сосновый квартал</a></h3>
+            <h3> <a href="#">Сосновый квартал</a></h3>
           </li>
         </ul>
         <ul class="links_all">
           <li> 
-            <h3> <a>Программа лояльности</a></h3>
+            <h3> <a href="#">Программа лояльности</a></h3>
           </li>
           <li> 
-            <h3> <a>Новости и акции</a></h3>
+            <h3> <a href="#">Новости и акции</a></h3>
           </li>
           <li> 
-            <h3> <a>Отдел продаж</a></h3>
+            <h3> <a href="#">Отдел продаж</a></h3>
           </li>
           <li> 
             <h3> </h3>
           </li>
-        </ul><a src="">
-                <button class="btn btn-green btn-center btn-uppercase">подобрать квартиру</button></a>
+        </ul>
+              <button class="btn btn-green btn-center btn-uppercase">подобрать квартиру</button>
         <ul class="social_links">
-          <li><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></li>
-          <li><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></li>
-          <li><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></li>
+          <li><a href="#"><svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg></a></li>
+          <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg></a></li>
+          <li><a href="#"><svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg></a></li>
         </ul>
         <p class="footer_info">&copy; 2016, ООО "Астродевелопмент", УНП 691759953 </p>
-        <p class="footer_info">Made in <span>Flex Media</span></p>
+        <p class="footer_info">Made in <span> <a class="links" href="#">Flex Media</a></span></p>
       </footer>
     </div>
     <!--END out-->
