--- a/src/pug/includes/_footer.pug
+++ b/src/pug/includes/_footer.pug
@@ -3,27 +3,27 @@ footer.footer.footer__footer
 	ul.links_quarter
 		li 
 			h3 
-				a Кедровый квартал
+				a(href='#') Кедровый квартал
 		li 
-			a О квартале
+			a(href='#') О квартале
 		li 
-			a Цены и условия
+			a(href='#') Цены и условия
 		li 
-			a Фотогалерея
+			a(href='#') Фотогалерея
 		li 
 			h3 
-				a Сосновый квартал
+				a(href='#') Сосновый квартал
 
 	ul.links_all
 		li 
 			h3 
-				a Программа лояльности
+				a(href='#') Программа лояльности
 		li 
 			h3 
-				a Новости и акции
+				a(href='#') Новости и акции
 		li 
 			h3 
-				a Отдел продаж
+				a(href='#') Отдел продаж
 		li  
 			h3 
 				
@@ -31,15 +31,19 @@ footer.footer.footer__footer
 
 	ul.social_links
 		li
-			<svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg>
+			a(href='#')
+				<svg version="1.1" id="Layer_21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-420.9 250.7 20.3 11.5" enable-background="new -420.9 250.7 20.3 11.5" xml:space="preserve"><path d="M-401.5,251.2h-3.3c-0.3,0-0.5,0.2-0.7,0.4c0,0-1.3,2.4-1.7,3.2c-1.1,2.2-1.9,1.5-1.9,0.5v-3.5c0-0.6-0.5-1.1-1.1-1.1h-2.5c-0.7-0.1-1.3,0.3-1.8,0.8c0,0,1.3-0.2,1.3,1.5c0,0.4,0,1.6,0,2.6c0,0.4-0.3,0.7-0.7,0.7c-0.2,0-0.4-0.1-0.6-0.2c-1-1.4-1.9-2.9-2.5-4.5c-0.1-0.2-0.4-0.4-0.6-0.4c-0.7,0-2.1,0-3,0c-0.3,0-0.5,0.2-0.5,0.5c0,0.1,0,0.1,0,0.2c0.9,2.5,4.8,10.3,9.3,10.3h1.9c0.4,0,0.7-0.3,0.7-0.7v-1.1c0-0.4,0.3-0.7,0.7-0.7c0.2,0,0.4,0.1,0.5,0.2l2.2,2.1c0.2,0.2,0.5,0.3,0.7,0.3h3c1.4,0,1.4-1,0.6-1.8c-0.5-0.5-2.5-2.6-2.5-2.6c-0.3-0.4-0.4-0.9-0.1-1.3c0.6-0.8,1.7-2.2,2.1-2.8C-401,252.9-400,251.2-401.5,251.2z"/></svg>
 
 		li
-			<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg>
+			a(href='#')
+				<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="259.6 84.4 351 239.5" enable-background="new 259.6 84.4 351 239.5" xml:space="preserve"><path d="M573.2,84.4H297c-20.6,0-37.4,16.8-37.4,37.4v164.6c0,20.6,16.8,37.4,37.4,37.4h276.2c20.6,0,37.4-16.8,37.4-37.4V121.8C610.6,101.2,593.8,84.4,573.2,84.4z M385.6,261.2V146.9l99,57.1L385.6,261.2z"/></svg>
 
 		li
-			<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg>
+			a(href='#')
+				<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 16" enable-background="new 0 0 7.5 16" xml:space="preserve"><path d="M7.5,5.2H4.9V3.5c0-0.6,0.4-0.8,0.7-0.8c0.3,0,1.8,0,1.8,0V0L5,0C2.2,0,1.6,2,1.6,3.4v1.8H0V8h1.6c0,3.6,0,8,0,8h3.4c0,0,0-4.4,0-8h2.3L7.5,5.2z"/></svg>
 
 	p.footer_info &copy; 2016, ООО "Астродевелопмент", УНП 691759953 
 
 	p.footer_info Made in 
-		span Flex Media
+		span 
+			a.links(href='#') Flex Media
