--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -1,11 +1,10 @@
 header.header
 	img.header__logo(src='img/logo.png')
-	p.header__text +375 29 000 00 00
-
-	div.header__menu
-		input(type="checkbox" id="hamburger" hidden="hidden")
-		label(for="hamburger" class="hamburger" id="menu")
+	p.header__text.header__text-ipad +375 29 000 00 00
+	div.header__menu#header__menu
+		//- input(type="checkbox" id="hamburger" hidden="hidden")
+		label(for="hamburger" class="hamburger js-menu-open" id="")
 			span
 			span
 			span
-	h3.header__text-iphone +375 29 000 00 00
+h3.header__text-iphone +375 29 000 00 00
