--- a/src/pug/includes/_modal.pug
+++ b/src/pug/includes/_modal.pug
@@ -1,7 +1,9 @@
 include _btn
 div.menu_mobile.modal.js_modal_mobile_open
 	div.footer.footer__menu
-		div.header
+		div.wrapp-menu-logo
+			img.menu-logo(src='img/logo_white.png' alt='logo' )
+			p.js_form_order <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 54.3 54.4" enable-background="new 0 0 54.3 54.4" xml:space="preserve"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.7,4.8l2.5-2.5l48.8,48.8l-2.5,2.5L0.7,4.8z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M3.2,2.3L5.5,0l48.8,48.8l-2.3,2.3L3.2,2.3z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M49.2,0.4l2.5,2.5L2.5,52.1L0,49.6L49.2,0.4z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M51.6,2.9L54,5.2L4.8,54.4l-2.4-2.4L51.6,2.9z"/></svg>
 		div.menu-title
 			h3.border-bottom Заявка		
 			form
@@ -13,6 +15,7 @@ div.menu_mobile.modal.js_modal_mobile_open
 				input.btn-white_white-border(type='email')
 				h4 Сообщение
 				textarea.btn-white_white-border(rows='10' )
-				+btn('btn-white btn-uppercase btn-center','Оставить заявку')
+				div.wrapp-btn
+					+btn('btn-white btn-uppercase btn-center','Оставить заявку')
 			
 					
