--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,10 +1,10 @@
 .wrapp_about_quarter {
-	margin: 40px 20px;
+	margin: 20px;
 	.about_quarter-h4 {
 		margin-bottom: 20px;
 	}
 	.about_quarter-h3, .about_quarter-description {
-		margin-bottom: 40px;
+		margin-bottom: 20px;
 	}
 
 }
@@ -38,7 +38,7 @@
 		justify-content: space-between;
 		align-items: flex-start;
 		flex-wrap: wrap;
-		margin: 55px 0 80px 0;
+		margin: 0 0 40px 0;
 		li {
 			padding: 0 20px;
 			flex-basis: 25%;
